# cc-wc

./: .clang-format  CMakeLists.txt  Readme.md
.github/workflows/: cmake-single-platform.yml
include/: file_stats_counter.h  process_arguments.h
src/: file_stats_counter.cpp  main.cpp  process_arguments.cpp
test/: ccwc_test.cpp  test.txt
